# ProjectHostServer

./: 404.html  Cargo.toml  test.http  wsl.ps1
cert/: cacert.pem  cakey.pem
data/quantumadmin/html-test/: index.html
src/: main.rs  workers.rs
