[package]
name = "ProjectHostServer"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9" , features = ["blocking", "json"] }
serde = { version = "1.0.216", features = ["derive"] }
base64 = "0.22.1"
serde_json = "1.0.133"
httpcodec = "0.2.3"
bytecodec = "0.4.15"
rouille = { version = "3.6.2"}
ring = "0.17.8"
hex = "0.4.3"
rs-firebase-admin-sdk = "2.4.0"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3.31"
log = "0.4.22"
simplelog = "0.12.2"
chrono = "0.4.39"
#openssl = { version = "0.10", features = ["vendored"] }
#rs-firebase-admin-sdk = "2.3.1"
